--- a/index-1.html
+++ b/index-1.html
@@ -180,7 +180,7 @@
           <a href="#" class="fa fa-pinterest"></a>
           </div>
           <div class="copyright"><div class="color2"><strong>Arch</strong> &copy; <span id="copyright-year"></span> | <a href="#">Privacy Policy</a></div>
-          Website designed by <a href="Nidhi bharti and " rel="nofollow">Nidhi bharti</a>
+          Website designed by <a href="Nidhi bharti and " rel="nofollow">Nidhi Bharti</a>
           </div>
       </div>
     </div>
